# news_agent

./: AGENTS.md  Cargo.toml  README.md
sample/: config.yaml  launch_agent.plist  report.md  state.json
src/: chrome.rs  cli.rs  config.rs  main.rs  notify.rs  sources.rs  state.rs  summarize.rs
src/chrome/: client.rs
src/cli/: fetch.rs  notify.rs  summarize.rs
src/config/: schema.rs
src/notify/: email.rs  report.rs  shortcut.rs  traits.rs
src/sources/: html_scrape.rs  models.rs  smol_ai.rs  traits.rs  x_api.rs
src/state/: models.rs
src/summarize/: models.rs  pipeline.rs  traits.rs
