[package]
name = "news_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
chromiumoxide = "0.8.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
